--- a/config.yaml
+++ b/config.yaml
@@ -1,23 +1,18 @@
 baseurl: https://example.com
-languageCode: en-us
+languageCode: zh-cn
 theme: hugo-theme-stack
 paginate: 5
-title: Example Site
+title: 一条鱼尾的博客
 
 languages:
-    en:
-        languageName: English
-        title: Example Site
-        weight: 1
     zh-cn:
         languageName: 中文
-        title: 演示站点
+        title: 一条鱼尾的博客
+        weight: 1
+    en:
+        languageName: English
+        title: AFishTail Blog
         weight: 2
-    ar:
-        languageName: عربي
-        languagedirection: rtl
-        title: موقع تجريبي
-        weight: 3
 
 # Change it to your Disqus shortname before using
 disqusShortname: hugo-theme-stack
@@ -27,7 +22,7 @@ googleAnalytics:
 
 # Theme i18n support
 # Available values: ar, ca, de, el, en, es, fr, id, it, ja, ko, nl, pt-br, th, uk, zh-cn, zh-hk, zh-tw
-DefaultContentLanguage: en
+DefaultContentLanguage: zh-cn
 
 # Set hasCJKLanguage to true if DefaultContentLanguage is in [zh-cn ja ko]
 # This will make .Summary and .WordCount behave correctly for CJK languages.
@@ -54,11 +49,11 @@ params:
 
     sidebar:
         emoji: 🍥
-        subtitle: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        subtitle: 不忘初心
         avatar:
             enabled: true
             local: true
-            src: img/avatar.png
+            src: img/avatar-ty.jpeg
 
     article:
         math: false
